Fixed content on smaller screens

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -203,5 +203,17 @@ html{
     100% { transform: rotate(360deg); }
   }
 
+  @media only screen and (max-width:1100px){
+    .sidebar, .canvas{
+      width: 100%;
+    }
+    .split{
+      height: auto;
+      position: relative;
+    }
+    body{
+      margin: 0;
+    }
+  }
   
   
